--- a/skill_snap/pubspec.yaml
+++ b/skill_snap/pubspec.yaml
@@ -2,7 +2,7 @@ name: skill_snap
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -44,6 +44,21 @@ dependencies:
   badges: ^3.1.2
   supabase: ^2.8.0
   intl: ^0.20.2
+  file_picker: ^10.2.0
+  emoji_picker_flutter: ^4.3.0
+  google_generative_ai: ^0.4.7
+  permission_handler: ^12.0.1
+  record: ^6.0.0
+  just_audio: ^0.10.4
+  syncfusion_flutter_gauges: ^30.1.42
+  fl_chart: ^1.0.0
+  flutter_radar_chart: ^0.2.1
+  flutter_animate: ^4.5.2
+  convex_bottom_bar: ^3.2.0
+  google_generative_language_api: ^0.2.1
+  google_gemini: ^0.1.2
+  http: ^1.5.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -55,13 +70,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  collection: ^1.19.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
